--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.544.0",
     "next": "14.2.33",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.3.1",
@@ -21,12 +24,15 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.33",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
