--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.544.0",
     "next": "14.2.33",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
