--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.5",
+    "drizzle-zod": "^0.8.3",
     "lucide-react": "^0.544.0",
     "next": "14.2.33",
     "next-auth": "^4.24.11",
