--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.90.2",
     "@trpc/client": "^11.6.0",
+    "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
