--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@uppy/aws-s3": "^5.0.1",
+    "@uppy/core": "^5.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -28,6 +30,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-sync-external-store": "^1.6.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/use-sync-external-store": "^1.5.0",
     "drizzle-kit": "^0.31.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.33",
