--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/drizzle-adapter": "^1.10.0",
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.90.2",
     "@trpc/client": "^11.6.0",
