--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@uppy/core": "^5.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
