--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "lucide-react": "^0.544.0",
     "next": "14.2.33",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "^1.6.0",
