--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
