--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.65.0",
     "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
