--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsup": "^8.5.0",
     "use-sync-external-store": "^1.6.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
