--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt",
+  "name": "nuxt-app",
   "type": "module",
   "private": true,
   "scripts": {
@@ -12,6 +12,8 @@
   "dependencies": {
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "@imooc-image-saas/api": "workspace:*",
+    "@trpc/client": "^11.6.0"
   }
 }
