--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -14,6 +14,8 @@
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "@imooc-image-saas/api": "workspace:*",
-    "@trpc/client": "^11.6.0"
+    "@trpc/client": "^11.6.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.2"
   }
 }
