--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@uppy/aws-s3": "^5.0.1",
     "@uppy/core": "^5.0.2",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +33,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "next": "14.2.33",
     "next-auth": "^4.24.11",
