--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -16,6 +16,7 @@
     "@imooc-image-saas/api": "workspace:*",
     "@imooc-image-saas/upload-button": "workspace:*",
     "@imooc-image-saas/preact-vue-connect": "workspace:*",
+    "@imooc-image-saas/uploader": "workspace:*",
     "@trpc/client": "^11.6.0",
     "@types/jsonwebtoken": "^9.0.10",
     "jsonwebtoken": "^9.0.2",
