--- a/packages/upload-button/package.json
+++ b/packages/upload-button/package.json
@@ -15,13 +15,15 @@
     "package.json"
   ],
   "peerDependencies": {
-    "preact": "^10.27.2"
+    "preact": "^10.27.2",
+    "@uppy/core": "^5.0.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
     "@types/node": "^24.6.0",
     "typescript": "~5.9.3",
     "tsup": "^8.5.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "@uppy/core": "^5.0.2"
   }
 }
